tests/baselines/reference/tsxFragmentErrors.errors.txt
tests/cases/conformance/jsx/file.tsx(7,24): error TS17014: JSX fragment has no corresponding closing tag.
tests/cases/conformance/jsx/file.tsx(9,5): error TS1005: 'SOMETHING CORRECT' expected.
tests/cases/conformance/jsx/file.tsx(11,1): error TS17014: JSX fragment has no corresponding closing tag.
tests/cases/conformance/jsx/file.tsx(11,17): error TS1005: '</' expected.


==== tests/cases/conformance/jsx/file.tsx (4 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
                           
    
    
    <>hi</div> // Error
    ~~
!!! error TS17014: JSX fragment has no corresponding closing tag.
        ~~~~~~
!!! error TS1005: 'SOMETHING CORRECT' expected.
    
    <>eof   // Error
    ~~
!!! error TS17014: JSX fragment has no corresponding closing tag.
                    
!!! error TS1005: '</' expected.